# RList

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
scripts/: bench.sh  bench_chart.py
src/: bibtex.rs  db.rs  fetch.rs  main.rs  model.rs  output.rs
