[package]
name = "rlist"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
clap_complete = "4.6.5"
dirs = "6.0.0"
open = "5.3.5"
roxmltree = "0.21.1"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"
terminal_size = "0.4.4"
unicode-normalization = "0.1.25"
unicode-width = "0.2.2"
ureq = { version = "2", features = ["json"] }

[profile.release]
lto = "thin"
strip = true
opt-level = 3
